--- a/example.ipynb
+++ b/example.ipynb
@@ -2,16 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-14T17:54:47.886741Z",
-     "start_time": "2021-04-14T17:54:47.880816Z"
+     "end_time": "2021-04-14T20:19:08.173948Z",
+     "start_time": "2021-04-14T20:19:01.590681Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Current google-chrome version is 89.0.4389\n",
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Driver [/Users/mengcai/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
+     ]
+    }
+   ],
    "source": [
-    "from Uniscraper import uniscraper"
+    "from Uniscraper.Uniscraper import uniscraper"
    ]
   },
   {
@@ -19,8 +44,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-14T17:54:43.166787Z",
-     "start_time": "2021-04-14T17:54:25.991328Z"
+     "end_time": "2021-04-14T20:19:26.510668Z",
+     "start_time": "2021-04-14T20:19:09.125610Z"
     }
    },
    "outputs": [],
@@ -34,8 +59,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-14T17:54:43.193836Z",
-     "start_time": "2021-04-14T17:54:43.170252Z"
+     "end_time": "2021-04-14T20:19:27.364493Z",
+     "start_time": "2021-04-14T20:19:27.347804Z"
     }
    },
    "outputs": [
@@ -52,6 +77,31 @@
    ],
    "source": [
     "webpage.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-14T20:19:55.072637Z",
+     "start_time": "2021-04-14T20:19:55.063189Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'                     menu          search   search              school of planning, design and construction          about  news  programs  research & outreach  students  education abroad  trainings  events  giving                 menu    school of planning, design and construction      meng cai      caimeng2@msu.edu    school of planning, design and construction  graduate student, urban and regional planning    area of expertise:  urban sustainability, autonomous vehicles, smart cities, computational social science, sustainable development goals   major professor:  eva kassens-noor                      follow us on youtube  follow us on twitter  follow us on facebook  follow us on instagram  join us on linkedin          call us: 517-432-0704  contact information  sitemap  accessibility  privacy  disclaimer    call msu: (517) 355-1855  visit: msu.edu  msu is an affirmative-action, equal-opportunity employer.  notice of nondiscrimination    spartans will .  © michigan state university                msu is an affirmative-action, equal-opportunity employer, committed to achieving excellence through a diverse workforce and inclusive culture that encourages all people to reach their full potential.  michigan state university extension programs and materials are open to all without regard to race, color, national origin, gender, gender identity, religion, age, height, weight, disability, political beliefs, sexual orientation, marital status, family status or veteran status. issued in furtherance of msu extension work, acts of may 8 and june 30, 1914, in cooperation with the u.s. department of agriculture. patrick i. cudney, acting director, msu extension, east lansing, mi 48824. this information is for educational purposes only. reference to commercial products or trade names does not imply endorsement by msu extension or bias against those not mentioned.  the 4-h name and emblem have special protections from congress, protected by code 18 usc 707.  we comply with the federal trade commission 1998 children’s online privacy protection act (coppa) .                              share content on your favorite social media platforms meng cai https://www.canr.msu.edu/people/meng-cai facebook twitter google linkedin pinterest tumblr xing reddit vk stumbleupon print email'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "webpage.search(\"caimeng2@msu.edu\")"
    ]
   },
   {
